--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,10 @@ members = [
    "websockets/tcp-chat",
    "websockets/websocket",
 ]
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
+
